# Gadaz

./: .gitignore  CMakeLists.txt  README.md
src/: engine.c  engine.h  input.c  input.h  shader.c  shader.h  timer.c  timer.h  util.c  util.h  window.c  window.h
src/graphics/: camera.c  camera.h  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h  texture.c  texture.h
src/math/: Matrix.c  Matrix.h  Vector.c  Vector.h  matrix.c  matrix.h  vector.c  vector.h
src/memory/: VertexArray.c  VertexArray.h  VertexBuffer.c  VertexBuffer.h  VertexBufferLayout.c  VertexBufferLayout.h  elementBuffer.c  elementBuffer.h  vertexArray.c  vertexArray.h  vertexBuffer.c  vertexBuffer.h  vertexBufferLayout.c  vertexBufferLayout.h
